--- a/Pandas-Challenge/PyCitySchools/PyCitySchools_KM.ipynb
+++ b/Pandas-Challenge/PyCitySchools/PyCitySchools_KM.ipynb
@@ -2649,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2663,7 +2663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2687,20 +2687,55 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>0.084674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>0.027483</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489           0.084674  \n",
+       "District             80.799062           0.027483  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2713,7 +2748,7 @@
     "    \"Average Reading Score\": average_reading_score_by_type,\n",
     "    \"% Passing Math\": average_percent_passing_math_by_type,\n",
     "    \"% Passing Reading\": average_percent_passing_reading_by_type,\n",
-    "    \"% Overall Passing\": overall_passing_spending\n",
+    "    \"% Overall Passing\": average_percent_overall_passing_by_type\n",
     "    \n",
     "})\n",
     "\n",
